@@ -64,6 +64,24 @@ name|solrj
 operator|.
 name|request
 operator|.
+name|IsUpdateRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
 name|RequestWriter
 import|;
 end_import
@@ -176,6 +194,16 @@ name|java
 operator|.
 name|net
 operator|.
+name|ConnectException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
 name|MalformedURLException
 import|;
 end_import
@@ -258,6 +286,55 @@ name|LBHttpSolrServer
 extends|extends
 name|SolrServer
 block|{
+DECL|field|RETRY_CODES
+specifier|private
+specifier|static
+name|Set
+argument_list|<
+name|Integer
+argument_list|>
+name|RETRY_CODES
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|(
+literal|4
+argument_list|)
+decl_stmt|;
+static|static
+block|{
+name|RETRY_CODES
+operator|.
+name|add
+argument_list|(
+literal|404
+argument_list|)
+expr_stmt|;
+name|RETRY_CODES
+operator|.
+name|add
+argument_list|(
+literal|403
+argument_list|)
+expr_stmt|;
+name|RETRY_CODES
+operator|.
+name|add
+argument_list|(
+literal|503
+argument_list|)
+expr_stmt|;
+name|RETRY_CODES
+operator|.
+name|add
+argument_list|(
+literal|500
+argument_list|)
+expr_stmt|;
+block|}
 comment|// keys to the maps are currently of the form "http://localhost:8983/solr"
 comment|// which should be equivalent to CommonsHttpSolrServer.getBaseURL()
 DECL|field|aliveServers
@@ -1030,6 +1107,15 @@ name|ex
 init|=
 literal|null
 decl_stmt|;
+name|boolean
+name|isUpdate
+init|=
+name|req
+operator|.
+name|request
+operator|instanceof
+name|IsUpdateRequest
+decl_stmt|;
 name|List
 argument_list|<
 name|ServerWrapper
@@ -1147,36 +1233,22 @@ name|SolrException
 name|e
 parameter_list|)
 block|{
-comment|// we retry on 404 or 403 or 503 - you can see this on solr shutdown
+comment|// we retry on 404 or 403 or 503 or 500
+comment|// unless it's an update - then we only retry on connect exceptions
 if|if
 condition|(
+operator|!
+name|isUpdate
+operator|&&
+name|RETRY_CODES
+operator|.
+name|contains
+argument_list|(
 name|e
 operator|.
 name|code
 argument_list|()
-operator|==
-literal|404
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|403
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|503
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|500
+argument_list|)
 condition|)
 block|{
 name|ex
@@ -1196,10 +1268,6 @@ throw|throw
 name|e
 throw|;
 block|}
-comment|// TODO: consider using below above - currently does cause a problem with distrib updates:
-comment|// seems to match up against a failed forward to leader exception as well...
-comment|//     || e.getMessage().contains("java.net.SocketException")
-comment|//     || e.getMessage().contains("java.net.ConnectException")
 block|}
 catch|catch
 parameter_list|(
@@ -1207,21 +1275,15 @@ name|SocketException
 name|e
 parameter_list|)
 block|{
-name|ex
-operator|=
-name|addZombie
-argument_list|(
-name|server
-argument_list|,
+if|if
+condition|(
+operator|!
+name|isUpdate
+operator|||
 name|e
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|SocketTimeoutException
-name|e
-parameter_list|)
+operator|instanceof
+name|ConnectException
+condition|)
 block|{
 name|ex
 operator|=
@@ -1232,6 +1294,42 @@ argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+name|e
+throw|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|SocketTimeoutException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|isUpdate
+condition|)
+block|{
+name|ex
+operator|=
+name|addZombie
+argument_list|(
+name|server
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+name|e
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1249,9 +1347,32 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+operator|!
+name|isUpdate
+operator|&&
 name|rootCause
 operator|instanceof
 name|IOException
+condition|)
+block|{
+name|ex
+operator|=
+name|addZombie
+argument_list|(
+name|server
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|isUpdate
+operator|&&
+name|rootCause
+operator|instanceof
+name|ConnectException
 condition|)
 block|{
 name|ex
@@ -1334,36 +1455,22 @@ name|SolrException
 name|e
 parameter_list|)
 block|{
-comment|// we retry on 404 or 403 or 503 - you can see this on solr shutdown
+comment|// we retry on 404 or 403 or 503 or 500
+comment|// unless it's an update - then we only retry on connect exceptions
 if|if
 condition|(
+operator|!
+name|isUpdate
+operator|&&
+name|RETRY_CODES
+operator|.
+name|contains
+argument_list|(
 name|e
 operator|.
 name|code
 argument_list|()
-operator|==
-literal|404
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|403
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|503
-operator|||
-name|e
-operator|.
-name|code
-argument_list|()
-operator|==
-literal|500
+argument_list|)
 condition|)
 block|{
 name|ex
@@ -1396,10 +1503,27 @@ name|SocketException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+operator|!
+name|isUpdate
+operator|||
+name|e
+operator|instanceof
+name|ConnectException
+condition|)
+block|{
 name|ex
 operator|=
 name|e
 expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+name|e
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1407,10 +1531,23 @@ name|SocketTimeoutException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+operator|!
+name|isUpdate
+condition|)
+block|{
 name|ex
 operator|=
 name|e
 expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+name|e
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1428,6 +1565,9 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+operator|!
+name|isUpdate
+operator|&&
 name|rootCause
 operator|instanceof
 name|IOException
@@ -1437,7 +1577,21 @@ name|ex
 operator|=
 name|e
 expr_stmt|;
-comment|// already a zombie, no need to re-add
+block|}
+elseif|else
+if|if
+condition|(
+name|isUpdate
+operator|&&
+name|rootCause
+operator|instanceof
+name|ConnectException
+condition|)
+block|{
+name|ex
+operator|=
+name|e
+expr_stmt|;
 block|}
 else|else
 block|{
